force-app/main/default/objects/Opportunity_Billing_Ad_Server__c/Opportunity_Billing_Ad_Server__c.object-meta.xml
<CustomObject>
    <label>Opportunity Billing Ad Server</label>
    <nameField>
        <displayFormat>OB-{0000}</displayFormat>
        <label>Opportunity Billing Ad Server ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Billing Ad Servers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>