force-app/main/default/objects/Opportunity_Billing_Ad_Server__c/fields/Billing_Ad_Server__c.field-meta.xml
<CustomField>
    <fullName>Billing_Ad_Server__c</fullName>
    <label>Billing Ad Server</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Party</fullName>
            </value>
            <value>
                <fullName>Adform</fullName>
            </value>
            <value>
                <fullName>Brightroll</fullName>
            </value>
            <value>
                <fullName>Comscore</fullName>
            </value>
            <value>
                <fullName>DFA/DCM</fullName>
            </value>
            <value>
                <fullName>ExtremeReach</fullName>
            </value>
            <value>
                <fullName>Flashtalking</fullName>
            </value>
            <value>
                <fullName>Innovid</fullName>
            </value>
            <value>
                <fullName>Sizmek</fullName>
            </value>
            <value>
                <fullName>DV</fullName>
            </value>
            <value>
                <fullName>IAS</fullName>
            </value>
            <value>
                <fullName>MOAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>