force-app/main/default/objects/Opportunity_Billing_Ad_Server__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Billing Ad Servers</relationshipLabel>
    <relationshipName>Opportunity_Billing_Ad_Servers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>