force-app/main/default/objects/Opportunity_Billing_Ad_Server__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Cross Device Display</fullName>
            </value>
            <value>
                <fullName>Cross Device Video</fullName>
            </value>
            <value>
                <fullName>LG CTV Content Network and O&amp;O</fullName>
            </value>
            <value>
                <fullName>LG CTV Native</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>