force-app/main/default/objects/Opportunity_Billing_Ad_Server__c/validationRules/Restrict_changing_product.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_changing_product</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Product__c)
)</errorConditionFormula>
    <errorMessage>You cannot change the product</errorMessage>
</ValidationRule>